--- a/libft/Makefile
+++ b/libft/Makefile
@@ -40,7 +40,8 @@ SOURCES = ft_putchar.c ft_putstr.c\
 		  ft_lstsize.c ft_lstlast.c\
 		  ft_lstadd_back.c ft_lstiter.c\
 		  ft_lstdelone.c ft_lstclear.c\
-		  ft_lstmap.c get_next_line.c\
+		  ft_lstmap.c ft_lstdelnode.c\
+		  get_next_line.c\
 		  ft_free_tab.c ft_strcmp.c\
 		  ft_strrcmp.c\
 		ft_isspace.c
